# Custom-Arch

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
Assembler/: CMakeLists.txt
Assembler/src/: ArgsParser.cpp  Assembler.cpp  Assembler.hpp  Buffer.cpp  Buffer.hpp  Lexer.cpp  Lexer.hpp  LinkedList.cpp  LinkedList.hpp  Main.cpp  Parser.cpp  Parser.hpp  PreProcessor.cpp  PreProcessor.hpp  util.h
Assembler/src/arch/x86_64/: util.asm
Emulator/: CMakeLists.txt
Emulator/src/: ArgsParser.cpp  ArgsParser.hpp  Emulator.cpp  Emulator.hpp  Exceptions.cpp  Exceptions.hpp  FileUtil.cpp  FileUtil.hpp  IOBus.cpp  IOBus.hpp  Interrupts.cpp  Interrupts.hpp  Main.cpp  Register.cpp  Register.hpp  Stack.cpp  Stack.hpp  math.cpp  math.hpp  spinlock.h  util.c  util.h
Emulator/src/Data-structures/: AVLTree.cpp  AVLTree.hpp  Bitmap.cpp  Bitmap.hpp  Buffer.cpp  Buffer.hpp  LinkedList.cpp  LinkedList.hpp
Emulator/src/IO/: IOBus.cpp  IOBus.hpp  IODevice.hpp  IOMemoryRegion.cpp  IOMemoryRegion.hpp
Emulator/src/IO/devices/: ConsoleDevice.cpp  ConsoleDevice.hpp
Emulator/src/IO/devices/Storage/: PhysicalRegionListBuffer.cpp  PhysicalRegionListBuffer.hpp  StorageDevice.cpp  StorageDevice.hpp  StorageFile.cpp  StorageFile.hpp
Emulator/src/IO/devices/Video/: VideoBackend.cpp  VideoBackend.hpp  VideoDevice.cpp  VideoDevice.hpp  VideoMemoryRegion.cpp  VideoMemoryRegion.hpp
Emulator/src/IO/devices/Video/backends/SDL/: SDLVideoBackend.cpp  SDLVideoBackend.hpp
Emulator/src/Instruction/: Instruction.cpp  Instruction.hpp  InstructionBuffer.cpp  InstructionBuffer.hpp  Operand.cpp  Operand.hpp
Emulator/src/MMU/: BIOSMemoryRegion.cpp  BIOSMemoryRegion.hpp  MMU.cpp  MMU.hpp  MemoryRegion.cpp  MemoryRegion.hpp  StandardMemoryRegion.cpp  StandardMemoryRegion.hpp  VirtualMMU.cpp  VirtualMMU.hpp
Emulator/src/OSSpecific/: File.hpp  Memory.hpp
Emulator/src/OSSpecific/Darwin/: Memory.cpp
Emulator/src/OSSpecific/Linux/: File.cpp  Memory.cpp
Emulator/src/arch/x86_64/: ALUInstruction.asm  ALUInstruction.h  spinlock.asm  util.asm
LibArch/: CMakeLists.txt
LibArch/include/libarch/: Instruction.hpp  Operand.hpp  spinlock.h
LibArch/include/libarch/Data-structures/: Buffer.hpp  LinkedList.hpp
LibArch/src/: Instruction.cpp  Operand.cpp
LibArch/src/Data-structures/: Buffer.cpp  LinkedList.cpp
docs/: design.md  internals.md
